Fix sheetListNoSheet color on Dark Mode

--- a/sass/_dark.scss
+++ b/sass/_dark.scss
@@ -142,6 +142,10 @@
     color: #fff;
   }
 
+  .sheetListNoSheet {
+    color: #fff;
+  }
+
   .chatRoleplayTranslation {
     color: #b636b7;
   }
